--- a/wip-portfolio/package.json
+++ b/wip-portfolio/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "@sanity/asset-utils": "^2.0.6",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.62.3",
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
+    "framer-motion": "^11.11.9",
     "next": "14.2.15",
+    "next-sanity": "^9.8.8",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
-    "react-use": "^17.5.1"
+    "react-hook-gyroscope": "^1.1.12",
+    "react-use": "^17.5.1",
+    "sanity": "^3.62.3",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
