--- a/wip-portfolio/package.json
+++ b/wip-portfolio/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/env": "^15.1.6",
     "@sanity/asset-utils": "^2.0.6",
     "@sanity/client": "^6.24.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.62.3",
     "firebase": "^10.14.1",
-    "firebase-admin": "^12.6.0",
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^6.3.0",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "next-sanity": "^9.8.8",
